Implemented the vectorized Distances for float. Adjusted the VectorDistance class. Manually set the vectorized version in the GrpcQueryBinder. And implemented a first version of SIMDRule.kt